add default style and working on login/register page

--- a/src/login.html
+++ b/src/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/default.css">
+    <link rel="stylesheet" href="./css/login.css">
     <title>FYP Management System</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         <h1>Welcome</h1>
         <form action="" class=""  id="login">
             <h3 class="form__title">Sign in to continue</h3>
-            <div class="form__message form__message--error">Incorrect username/password combination.</div>
+            <div class="form__message form__message--error">Incorrect username/password combination</div>
             <div class="form__input-group">
                 <input type="text" class="form__input" autofocus placeholder="Email Address">
                 <div class="form__input-error-message">This is an error message</div>
