--- a/src/Supervisor_Dashboard.html
+++ b/src/Supervisor_Dashboard.html
@@ -8,30 +8,34 @@
     <link rel="stylesheet" href="./css/nav-bar.css">
     <link rel="stylesheet" href="./css/dashboard.css">
     <script src="https://kit.fontawesome.com/3d7a902bb5.js" crossorigin="anonymous"></script>
+    <script src="./js/nav-bar.js"></script>
     <title>Dashboard</title>
 </head>
 <body>
     <div class="nav-bar">
-        <div class="nav-bar__user">
+        <div class="nav-bar__user-div">
             <div>
                 <img class="" src="./images/User.png" alt="User Icon">
             </div>
-            <div id="userType">UserType</div>
+            <div id="userType">UserType - Supervisor</div>
         </div>
-        <div class="nav-bar__page-list">
-            <ul>
-                <li><a class="fill-div" href="./Supervisor_Dashboard.html"><span class="page-icon"><i class="fa-brands fa-trello"></i></span>Dashboard</a></li>
-                <li><a class="fill-div" href="./Login_Register.html"><span class="page-icon"><i class="fa-solid fa-briefcase"></i></span>Projects</a></li>
-                <li><a class="fill-div" href=""><span class="page-icon"><i class="fa-solid fa-calendar-days"></i></span>Meetings</a></li>
-                <li><a class="fill-div" href=""><span class="page-icon"><i class="fa-solid fa-bullseye"></i></span>Goals</a></li>
-                <li><a class="fill-div" href=""><span class="page-icon"><i class="fa-solid fa-clipboard-list"></i></span>Assessment</a></li>
-            </ul>
+        <div class="wrapper__page-button">
+            <div class="nav-bar__page-list">
+                <ul id="myDiv">
+                    <li><a class="page-button active" href="./Supervisor_Dashboard.html"><span class="page-icon"><i class="fa-brands fa-trello"></i></span>Dashboard</a></li>
+                    <li><a class="page-button" href=""><span class="page-icon"><i class="fa-solid fa-briefcase"></i></span>Projects</a></li>
+                    <li><a class="page-button" href=""><span class="page-icon"><i class="fa-solid fa-calendar-days"></i></span>Meetings</a></li>
+                    <li><a class="page-button" href=""><span class="page-icon"><i class="fa-solid fa-bullseye"></i></span>Goals</a></li>
+                    <li><a class="page-button" href=""><span class="page-icon"><i class="fa-solid fa-clipboard-list"></i></span>Assessment</a></li>
+                </ul>
+            </div>
+            <div class="wrapper__sign-out">
+                <a id="signout" href="Login_Register.html">Sign Out</a>
+            </div>
         </div>
     </div>
+        
     <div class="container__content">
-        <div class="wrapper__sign-out">
-            <a id="signout" href="#">Sign Out</a>
-        </div>
         <div class="container__dashboard">
             <h1>DASHBOARD</h1>
             <div class="container__card">
