--- a/src/Supervisor_Meeting.html
+++ b/src/Supervisor_Meeting.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/nav-bar.css">
-    <link rel="stylesheet" href="./css/dashboard.css">
+
     <script src="https://kit.fontawesome.com/3d7a902bb5.js" crossorigin="anonymous"></script>
-    <script src="./js/nav-bar.js"></script>
-    <title>Dashboard</title>
+
+    <title>Meetings</title>
 </head>
 <body>
     <div class="nav-bar">
@@ -22,9 +22,9 @@
         <div class="wrapper__page-button">
             <div class="nav-bar__page-list">
                 <ul id="myDiv">
-                    <li><a class="page-button active" href="./Supervisor_Dashboard.html"><span class="page-icon"><i class="fa-brands fa-trello"></i></span>Dashboard</a></li>
-                    <li><a class="page-button" href="./Supervisor_Project.html"><span class="page-icon"><i class="fa-solid fa-briefcase"></i></span>Projects</a></li>
-                    <li><a class="page-button" href="./Supervisor_Meeting.html"><span class="page-icon"><i class="fa-solid fa-calendar-days"></i></span>Meetings</a></li>
+                    <li><a class="page-button" href="./Supervisor_Dashboard.html"><span class="page-icon"><i class="fa-brands fa-trello"></i></span>Dashboard</a></li>
+                    <li><a class="page-button" href="./Student_Project.html"><span class="page-icon"><i class="fa-solid fa-briefcase"></i></span>Projects</a></li>
+                    <li><a class="page-button active" href="./Supervisor_Meeting.html"><span class="page-icon"><i class="fa-solid fa-calendar-days"></i></span>Meetings</a></li>
                     <li><a class="page-button" href="./Supervisor_Goals.html"><span class="page-icon"><i class="fa-solid fa-bullseye"></i></span>Goals</a></li>
                     <li><a class="page-button" href="./Supervisor_Assessment.html"><span class="page-icon"><i class="fa-solid fa-clipboard-list"></i></span>Assessment</a></li>
                 </ul>
@@ -32,23 +32,6 @@
             <div class="wrapper__sign-out">
                 <a id="signout" href="Login_Register.html">Sign Out</a>
             </div>
-        </div>
-    </div>
-        
-    <div class="container__content">
-        <div class="container__dashboard">
-            <h1>DASHBOARD</h1>
-            <div class="container__card">
-                <div class="card">
-                    <h2 class="card__title">PROJECTS</h2>
-                    <!--  -->
-                </div>
-                <div class="card">
-                    <h2 class="card__title">UPCOMING MEETINGS</h2>
-                    <!--  -->
-                </div>
-            </div>
-            
         </div>
     </div>
 </body>
