worked on projects pages

--- a/src/Student_Project.html
+++ b/src/Student_Project.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/nav-bar.css">
     <link rel="stylesheet" href="./css/project.css">
     <script src="https://kit.fontawesome.com/3d7a902bb5.js" crossorigin="anonymous"></script>
-
+    <script src="./js/student-project.js"></script>
     <title>Project</title>
 </head>
 <body>
@@ -22,16 +22,84 @@
         <div class="wrapper__page-button">
             <div class="nav-bar__page-list">
                 <ul id="myDiv">
-                    <li><a class="page-button" href="./Supervisor_Dashboard.html"><span class="page-icon"><i class="fa-brands fa-trello"></i></span>Dashboard</a></li>
+                    <li><a class="page-button" href="./Student_Dashboard.html"><span class="page-icon"><i class="fa-brands fa-trello"></i></span>Dashboard</a></li>
                     <li><a class="page-button active" href="./Student_Project.html"><span class="page-icon"><i class="fa-solid fa-briefcase"></i></span>Projects</a></li>
-                    <li><a class="page-button" href="./Supervisor_Meeting.html"><span class="page-icon"><i class="fa-solid fa-calendar-days"></i></span>Meetings</a></li>
-                    <li><a class="page-button" href="./Supervisor_Goals.html"><span class="page-icon"><i class="fa-solid fa-bullseye"></i></span>Goals</a></li>
-                    <li><a class="page-button" href="./Supervisor_Assessment.html"><span class="page-icon"><i class="fa-solid fa-clipboard-list"></i></span>Assessment</a></li>
+                    <li><a class="page-button" href="./Student_Meeting.html"><span class="page-icon"><i class="fa-solid fa-calendar-days"></i></span>Meetings</a></li>
+                    <li><a class="page-button" href="./Student_Goals.html"><span class="page-icon"><i class="fa-solid fa-bullseye"></i></span>Goals</a></li>
+                    <li><a class="page-button" href="./"><span class="page-icon"><i class="fa-solid fa-clipboard-list"></i></span>Assessment</a></li>
                 </ul>
             </div>
             <div class="wrapper__sign-out">
                 <a id="signout" href="Login_Register.html">Sign Out</a>
             </div>
+        </div>
+    </div>
+
+    <div class="container__content">
+        <div class="container__project">
+            <h1 class="content-title">Projects</h1>
+            <div class="wrapper__button">
+                <div class="button--left-group">
+                    <div>
+                        <button id="proposalsBtnStud" class="button button-active">Proposals</button>
+                    </div>
+                    <div>
+                        <button id="projectsBtnStud" class="button">My Project</button>
+                    </div>
+                </div>
+                <div class="button--right-group">
+                    <div>
+                        <button id="addProposal" class="button button-add"><span class="icon"><i class="fa-solid fa-plus"></i></span></i>Add Proposal</button>
+                    </div>
+                </div>
+            </div>
+
+            <div id="proposalTableStud" class="card card__proposal-card card-hidden">
+                <table class="table table--proposal">
+                    <thead>
+                        <caption>Proposals</caption>
+                        <tr>
+                            <th>Project Title</th>
+                            <th>Owner</th>
+                            <th>Proposal</th>
+                            <th>Published Date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Test</td>
+                            <td>Text</td>
+                            <td><a href="">Project_Proposal.pdf</a></td>
+                            <td>May 1, 2022</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- TODO: form? table? -->
+            <div id="myProjects" class="card__my-project">
+                <div class="card wrapper__my-project">
+                    <form class="form__my-project" action="" method="POST">
+                        <h2>My Project</h2>
+                        <hr>
+                        <div class="project-info">
+                            <p>Name: <span>Albert Lim</span></p>
+                            <p>Project Title: <span>Hotel Management System Project</span></p>
+                            <p>Supervisor: <span>Raman Khurana</span></p>
+                            <div class="wrapper__file-upload">
+                                <p>Project Plan: </p>
+                                <input type="file" name="file" id="file" class="inputfile" data-multiple-caption="{count} files selected" multiple  />
+                                <label for="file">Choose a file...</label>
+                            </div>
+                            <div class="wrapper__button-card">
+                                <button class="button button-card" type="submit">Upload</button>
+                                <button class="button button-card">Remove</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
