edit student project styles

--- a/src/Student_Project.html
+++ b/src/Student_Project.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
 
-            <div id="proposalTableStud" class="card card__proposal-card card-hidden">
+            <div id="proposalTableStud" class="card card__proposal-card">
                 <table class="table table--proposal">
                     <thead>
                         <caption>Proposals</caption>
@@ -77,7 +77,7 @@
             </div>
 
             <!-- TODO: form? table? -->
-            <div id="myProjects" class="card__my-project">
+            <div id="myProjects" class="card__my-project card-hidden">
                 <div class="card wrapper__my-project">
                     <form class="form__my-project" action="" method="POST">
                         <h2>My Project</h2>
