worked on meeting pages

--- a/src/Student_Dashboard.html
+++ b/src/Student_Dashboard.html
@@ -37,7 +37,7 @@
         
     <div class="container__content">
         <div class="container__dashboard">
-            <h1>DASHBOARD</h1>
+            <h1>Dashboard</h1>
             <div class="container__card">
                 <div class="card">
                     <h2 class="card__title">MY PROJECTS</h2>
