--- a/src/Student_Project.html
+++ b/src/Student_Project.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/nav-bar.css">
     <link rel="stylesheet" href="./css/project.css">
     <script src="https://kit.fontawesome.com/3d7a902bb5.js" crossorigin="anonymous"></script>
-    <script src="./js/student-project.js"></script>
+    <script src="./js/student_project.js"></script>
     <title>Project</title>
 </head>
 <body>
