worked on student goals page

--- a/src/Student_Goals.html
+++ b/src/Student_Goals.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/nav-bar.css">
-
+    <link rel="stylesheet" href="./css/student_goals.css">
     <script src="https://kit.fontawesome.com/3d7a902bb5.js" crossorigin="anonymous"></script>
 
     <title>Goals</title>
@@ -31,6 +31,29 @@
             </div>
             <div class="wrapper__sign-out">
                 <a id="signout" href="Login_Register.html">Sign Out</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container__content">
+        <div class="container__goals">
+            <h1 class="content-title">Goals</h1>
+            <div class="container__card">
+                <h3 class="title">Goals List</h3>
+                <div class="card">
+                    <div>
+                        <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title</h3>
+                    </div>
+                    <p class="card__duedate">Deadline/Duedate</p>
+                </div>
+
+                <div class="card">
+                    <div>
+                        <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title</h3>
+                    </div>
+                    <p class="card__duedate">Deadline/Duedate</p>
+                </div>
+
             </div>
         </div>
     </div>
