correct some mistakes and add more deafult colours

--- a/src/Supervisor_Goals.html
+++ b/src/Supervisor_Goals.html
@@ -23,7 +23,7 @@
             <div class="nav-bar__page-list">
                 <ul id="myDiv">
                     <li><a class="page-button" href="./Supervisor_Dashboard.html"><span class="page-icon"><i class="fa-brands fa-trello"></i></span>Dashboard</a></li>
-                    <li><a class="page-button" href="./Student_Project.html"><span class="page-icon"><i class="fa-solid fa-briefcase"></i></span>Projects</a></li>
+                    <li><a class="page-button" href="./Supervisor_Project.html"><span class="page-icon"><i class="fa-solid fa-briefcase"></i></span>Projects</a></li>
                     <li><a class="page-button" href="./Supervisor_Meeting.html"><span class="page-icon"><i class="fa-solid fa-calendar-days"></i></span>Meetings</a></li>
                     <li><a class="page-button active" href="./Supervisor_Goals.html"><span class="page-icon"><i class="fa-solid fa-bullseye"></i></span>Goals</a></li>
                     <li><a class="page-button" href="./Supervisor_Assessment.html"><span class="page-icon"><i class="fa-solid fa-clipboard-list"></i></span>Assessment</a></li>
