edit student project card button

--- a/src/Student_Project.html
+++ b/src/Student_Project.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/nav-bar.css">
-    <link rel="stylesheet" href="./css/project.css">
+    <link rel="stylesheet" href="./css/student_project.css">
     <script src="https://kit.fontawesome.com/3d7a902bb5.js" crossorigin="anonymous"></script>
     <script src="./js/student_project.js"></script>
     <title>Project</title>
@@ -92,8 +92,8 @@
                                 <label for="file">Choose a file...</label>
                             </div>
                             <div class="wrapper__button-card">
-                                <button class="button button-card" type="submit">Upload</button>
-                                <button class="button button-card">Remove</button>
+                                <button class="button button-card button-card--upload" type="submit"><span class="icon"><i class="fa-solid fa-upload"></i></span> Upload</button>
+                                <button class="button button-card button-card--remove"><span class="icon"><i class="fa-solid fa-trash"></i></span> Remove</button>
                             </div>
                         </div>
                     </form>
