edit supervisor meeting button

--- a/src/Supervisor_Meeting.html
+++ b/src/Supervisor_Meeting.html
@@ -166,8 +166,8 @@
                     </div>
 
                     <div class="container__button">
-                        <button class="form__button form__button--create" type="submit">Create</button>
-                        <button class="form__button form__button--clear" type="reset" value="Clear Form">Clear</button>
+                        <button class="form__button form__button--create" type="submit"><span class="icon"><i class="fa-solid fa-circle-plus"></i></span>Create</button>
+                        <button class="form__button form__button--clear" type="reset" value="Clear Form"><span class="icon"><i class="fa-solid fa-delete-left"></i></span>Clear</button>
                     </div>
                 </form>
             </div>
