worked on both users' goals page

--- a/src/Student_Goals.html
+++ b/src/Student_Goals.html
@@ -38,22 +38,57 @@
     <div class="container__content">
         <div class="container__goals">
             <h1 class="content-title">Goals</h1>
-            <div class="container__card">
+            <div class="container__goals-list">
                 <h3 class="title">Goals List</h3>
-                <div class="card">
-                    <div>
-                        <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title</h3>
+                <div class="container__card">
+                    <div class="card">
+                        <div>
+                            <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title</h3>
+                        </div>
+                        <p class="card_detail">Descriptionnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn</p>
+                        <p class="card_detail card__duedate">Deadline/Duedate</p>
                     </div>
-                    <p class="card__duedate">Deadline/Duedate</p>
-                </div>
 
-                <div class="card">
-                    <div>
-                        <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title</h3>
+                    <div class="card">
+                        <div>
+                            <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title A</h3>
+                        </div>
+                        <p class="card_detail">Descriptionnnnnnnnnnnn</p>
+                        <p class="card_detail card__duedate">Deadline/Duedate</p>
                     </div>
-                    <p class="card__duedate">Deadline/Duedate</p>
-                </div>
 
+                    <div class="card">
+                        <div>
+                            <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title B</h3>
+                        </div>
+                        <p class="card_detail">Descriptionnnnnnnnnnnn</p>
+                        <p class="card_detail card__duedate">Deadline/Duedate</p>
+                    </div>
+
+                    <div class="card">
+                        <div>
+                            <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title C</h3>
+                        </div>
+                        <p class="card_detail">Descriptionnnnnnnnnnnn</p>
+                        <p class="card_detail card__duedate">Deadline/Duedate</p>
+                    </div>
+
+                    <div class="card">
+                        <div>
+                            <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title D</h3>
+                        </div>
+                        <p class="card_detail">Descriptionnnnnnnnnnnn</p>
+                        <p class="card_detail card__duedate">Deadline/Duedate</p>
+                    </div>
+
+                    <div class="card">
+                        <div>
+                            <h3 class="card__title"><i class="fa-solid fa-bullseye card__icon"></i>Goal Title E</h3>
+                        </div>
+                        <p class="card_detail">Descriptionnnnnnnnnnnn</p>
+                        <p class="card_detail card__duedate">Deadline/Duedate</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
