add student assessment page

--- a/src/Student_Meeting.html
+++ b/src/Student_Meeting.html
@@ -26,7 +26,7 @@
                     <li><a class="page-button" href="./Student_Project.html"><span class="page-icon"><i class="fa-solid fa-briefcase"></i></span>Projects</a></li>
                     <li><a class="page-button active" href="./Student_Meeting.html"><span class="page-icon"><i class="fa-solid fa-calendar-days"></i></span>Meetings</a></li>
                     <li><a class="page-button" href="./Student_Goals.html"><span class="page-icon"><i class="fa-solid fa-bullseye"></i></span>Goals</a></li>
-                    <li><a class="page-button" href="./"><span class="page-icon"><i class="fa-solid fa-clipboard-list"></i></span>Assessment</a></li>
+                    <li><a class="page-button" href="./Student_Assessment.html"><span class="page-icon"><i class="fa-solid fa-clipboard-list"></i></span>Assessment</a></li>
                 </ul>
             </div>
             <div class="wrapper__sign-out">
