--- a/src/Supervisor_Goals.html
+++ b/src/Supervisor_Goals.html
@@ -179,14 +179,14 @@
                     <div class="form__input-group">
                         <label class="form__input-label" for="title">Title</label><br>
                         <i class="fa-solid fa-square-pen form__input-icon"></i>
-                        <input type="text" id="title" class="form__input" autofocus placeholder="Enter Goal title...">
+                        <input type="text" id="title" class="form__input" autofocus placeholder="Enter goal's title...">
                         <div class="form__input-error-message"></div>
                     </div>
 
                     <div class="form__input-group">
                         <label class="form__input-label" for="description">Description</label><br>
                         <i class="fa-solid fa-file-lines form__input-icon"></i>
-                        <input type="textarea" id="description" class="form__input" autofocus placeholder="Enter meeting description...">
+                        <input type="textarea" id="description" class="form__input" autofocus placeholder="Enter goal's description...">
                         <div class="form__input-error-message"><!--This is an error message --></div>
                     </div>
                     
@@ -200,7 +200,7 @@
                     <div class="form__input-group">
                         <label class="form__input-label" for="participants">Assign to</label><br>
                         <i class="fa-solid fa-users form__input-icon"></i>
-                        <input type="text" id="participants" class="form__input" autofocus placeholder="Invite students...">
+                        <input type="text" id="participants" class="form__input" autofocus placeholder="Assign to students...">
                         <div class="form__input-error-message"><!--This is an error message --></div>
                     </div>
 
