--- a/src/login_register.html
+++ b/src/login_register.html
@@ -20,7 +20,7 @@
     </header>
 
     <div class="container__form">
-        <form action="" class="form"  id="login">
+        <form action="./php/login.php" class="form"  id="login" method="post">
             <h1>Welcome!</h1>
             <h3 class="form__title">Sign in to continue</h3>
             <div class="form__message form__message--error"><!--Incorrect username/password combination --></div>
@@ -45,25 +45,25 @@
             </p>
         </form>
 
-        <form action="" class="form form--hidden"  id="register">
+        <form action="./php/register.php" class="form form--hidden"  id="register" method="post">
             <h3 class="form__title">Sign Up</h3>
             <div class="form__message form__message--error"><!--Incorrect username/password combination --></div>
             
             <div class="form__input-group">
                 <i class="fa-solid fa-user form__input-icon"></i>
-                <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username">
+                <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username" name="username">
                 <div class="form__input-error-message"></div>
             </div>
             
             <div class="form__input-group">
                 <i class="fa-solid fa-envelope form__input-icon"></i>
-                <input type="text" id="signupEmail" class="form__input" autofocus placeholder="Email Address">
+                <input type="text" id="signupEmail" class="form__input" autofocus placeholder="Email Address" name="email">
                 <div class="form__input-error-message"></div>
             </div>
 
             <div class="form__input-group">
                 <i class="fa-solid fa-unlock-keyhole form__input-icon"></i>
-                <input type="password" id="signupPassword" class="form__input" autofocus placeholder="Password">
+                <input type="password" id="signupPassword" class="form__input" autofocus placeholder="Password" name="password">
                 <div class="form__input-error-message"><!--This is an error message --></div>
             </div>
             <div class="container__button">
